--- a/dhcp.yaml
+++ b/dhcp.yaml
@@ -39,3 +39,43 @@ subnets:
         boot:
           tftp_server: "192.168.1.5"
           filename: "ipxe.efi"           # Different filename for UEFI boot
+  - network: 192.168.2.0/24
+    description: "Example Home Network"
+
+    # Gateway and DNS for this subnet
+    gateway: 192.168.1.2
+    dns_servers:
+      - 8.8.8.8
+      - 1.1.1.1
+
+    # Lease time
+    lease_duration: 24h
+    max_lease_duration: 168h  # 7 days
+
+    # DHCP options (optional)
+    options:
+      domain_name: "example.local"
+
+    # PXE/iPXE boot settings (network-wide defaults)
+    # These are applied to all clients in this subnet
+    boot:
+      tftp_server: "192.168.2.5"      # DHCP option 66 - TFTP server address
+      filename: "pxelinux.0"           # DHCP option 67 - Boot filename
+
+    # Dynamic pools (LRU allocation)
+    pools:
+      - range_start: 192.168.2.100
+        range_end: 192.168.2.200
+        description: "Dynamic pool"
+
+    # Static reservations
+    reservations:
+      - hostname: test-server
+        mac: "aa:bb:cc:dd:ee:ff"
+        ip: 192.168.2.10
+        description: "Test server2"
+        # Per-host boot override (optional)
+        # Overrides the subnet-level boot settings for this specific host
+        boot:
+          tftp_server: "192.168.2.5"
+          filename: "ipxe.efi"           # Different filename for UEFI boot
