Update wlan0 network description and DNS server

--- a/dhcp.yaml
+++ b/dhcp.yaml
@@ -103,13 +103,15 @@ subnets:
         description: "Dynamic pool"
 
   - network: 172.16.4.0/24
-    description: "wlan0 network"
+    description: "Wireless network"
     gateway: 172.16.4.1
     dns_servers:
-      - 8.8.8.8
+      - 172.16.4.1
       - 1.1.1.1
     lease_duration: 24h
     max_lease_duration: 168h
+    options:
+      domain_name: "starnix.net"
     pools:
       - range_start: 172.16.4.100
         range_end: 172.16.4.200
